k8s/eventrunner-api/base/eventrunner-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventrunner-api
  namespace: eventrunner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eventrunner-api
  template:
    metadata:
      annotations:
        sidecar.istio.io/logLevel: debug
        proxy.istio.io/config: |
          tracing:
            sampling: 100.0
            customTags:
              request.host:
                header:
                  name: :authority
      labels:
        app: eventrunner-api
        sidecar.istio.io/inject: "false"
    spec:
      serviceAccountName: eventrunner-account
      imagePullSecrets:
        - name: ghcr-io-cred
      containers:
        - name: eventrunner-api
          image: ghcr.io/carverauto/eventrunner-api:v0.0.28
          imagePullPolicy: Always
          volumeMounts:
            - name: config
              mountPath: /app/configs
            - name: nats-creds
              mountPath: /app/nats.creds
              subPath: nats.creds
      volumes:
        - name: config
          configMap:
            name: eventrunner-config
        - name: nats-creds
          secret:
            secretName: nats-creds
            items:
              - key: nats.creds
                path: nats.creds
