k8s/eventrunner-api/base/eventrunner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventrunner-api
  namespace: eventrunner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eventrunner-api
  template:
    metadata:
      labels:
        app: eventrunner-api
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: eventrunner-account
      imagePullSecrets:
        - name: ghcr-io-cred
      containers:
        - name: eventrunner-api
          image: ghcr.io/carverauto/eventrunner-api:v0.0.04
          imagePullPolicy: Always
          volumeMounts:
            - name: config
              mountPath: /app/configs
            - name: nats-creds
              mountPath: /app/nats.creds
              subPath: nats.creds
      volumes:
        - name: config
          configMap:
            name: eventrunner-config
        - name: nats-creds
          secret:
            secretName: nats-creds
            items:
              - key: nats.creds
                path: nats.creds
