k8s/eventrunner-api/base/istio-auth-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: eventrunner-oathkeeper
  namespace: eventrunner
spec:
  selector:
    matchLabels:
      app: eventrunner-api
  action: CUSTOM
  provider:
    name: ext-authz
  rules:
    - {}
